--- a/NaviMap/app/src/main/res/layout/content_main.xml
+++ b/NaviMap/app/src/main/res/layout/content_main.xml
@@ -5,16 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.navimap.MainActivity"
+    tools:context="com.example.navimapv3.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
+    <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="20dp"
+        android:orientation="horizontal" />
 
 </android.support.constraint.ConstraintLayout>
