--- a/NaviMap/app/src/main/res/drawable/side_nav_bar.xml
+++ b/NaviMap/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#3eb489"
+        android:endColor="#236b51"
+        android:startColor="#236b51"
         android:type="linear" />
 </shape>
