--- a/NaviMap/app/src/main/res/layout/activity_main.xml
+++ b/NaviMap/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,15 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
+<!--
+
+-->
 
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -22,4 +26,12 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
+    <include
+        layout="@layout/registration_form"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+
 </android.support.v4.widget.DrawerLayout>
+
