--- a/NaviMap/app/src/main/res/layout/registraition_form.xml
+++ b/NaviMap/app/src/main/res/layout/registraition_form.xml
@@ -2,14 +2,37 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/registration_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:attr/colorBackground"
     tools:context=".MapsActivity">
 
 
+    <TextView
+        android:id="@+id/alreadySignedUpText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/already_signed_upText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/moveToSingInText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:text="@string/sign_inText"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintStart_toEndOf="@+id/alreadySignedUpText"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/reg_login_textInput"
+        android:id="@+id/reg_usernameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -17,16 +40,20 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/moveToSingInText">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/reg_username_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:hint="@string/loginText"
+            android:inputType="text"
+            android:maxLength="20"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/reg_passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -34,33 +61,39 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_login_textInput">
+        app:layout_constraintTop_toBottomOf="@+id/reg_usernameInput">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/reg_password_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:hint="@string/passwordText"
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/register_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        android:text="@string/sign_upText"
+        android:textSize="12sp"
+        android:onClick="onClickSignUpButton"
+        app:layout_constraintEnd_toEndOf="@+id/reg_passwordInput"
+        app:layout_constraintTop_toBottomOf="@+id/reg_passwordInput" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/closeRegForm_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        android:text="@string/closeRegForm_ButtonText"
+        android:textSize="12sp"
+        android:onClick="onClickCloseSignUpFormButton"
+        app:layout_constraintStart_toStartOf="@+id/reg_passwordInput"
+        app:layout_constraintTop_toBottomOf="@+id/reg_passwordInput" />
 </android.support.constraint.ConstraintLayout>
 
 
