--- a/NaviMap/app/src/main/res/layout/registraition_form.xml
+++ b/NaviMap/app/src/main/res/layout/registraition_form.xml
@@ -40,7 +40,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/moveToSingInText">
+        app:layout_constraintTop_toBottomOf="@+id/moveToSingInText"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+
+        >
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/reg_username_editText"
@@ -49,7 +53,9 @@
             android:hint="@string/loginText"
             android:inputType="text"
             android:maxLength="20"
-            android:singleLine="true" />
+            android:singleLine="true"
+
+            />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -61,7 +67,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_usernameInput">
+        app:layout_constraintTop_toBottomOf="@+id/reg_usernameInput"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+
+        >
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/reg_password_editText"
