--- a/NaviMap/app/src/main/res/layout/activity_maps.xml
+++ b/NaviMap/app/src/main/res/layout/activity_maps.xml
@@ -54,10 +54,11 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginTop="88dp"
         android:onClick="onClickSignUpTestButton"
         android:text="@string/sign_upText"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
